testdata/mv_stmts9.txt
mv F:/BEGIN/+0,/END/-0 New
-- x.go --
package p

func F(int) {
	who := "world"
	for {
		switch 1 {
		case 1:
			// BEGIN
			if who == "world" {
				return
			}
			// END
		}
	}
}
-- stderr --
x.go:9:1: multiple control flow exits from moved code:
	x.go:10:5: return
	x.go:12:1: implicit break
ERROR: errors found during: mv F:/BEGIN/+0,/END/-0 New
